[tool.poetry]
name = "simple-dnf"
version = "0.1.0"
description = "Simple graphical utility for DNF package management"
authors = ["Hyacinthe Pierre Friedrichs <hyakosm@free.fr>", "Arkelis <guillaume.fayard@pycolore.fr>"]
license = "GPL-3.0+"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
