[tool.poetry]
name = "simple-dnf"
version = "0.1.1"
description = "Simple graphical utility for DNF package management"
authors = ["Maya Friedrichs <mail@hyakosm.net>", "Arkelis <guillaume.fayard@pycolore.fr>"]
license = "GPL-3.0+"

[tool.poetry.scripts]
simple-dnf = "simple_dnf.__main__:main"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
